# folder-size-report

./: .gitignore  Cargo.toml  README.md
src/: config.rs  error_log.rs  human.rs  main.rs  platform.rs  progress.rs  report.rs  scanner.rs  summary.rs  top.rs
