[package]
name = "folder-size-report"
version = "0.1.0"
edition = "2021"
description = "Windows directory size analyzer CLI"
license = "MIT"

[[bin]]
name = "sizes"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1.3"
time = { version = "0.3", features = ["formatting", "local-offset", "macros", "serde"] }
ctrlc = "3.4"
crossterm = "0.27"
num_cpus = "1.16"
windows-sys = { version = "0.52", features = ["Win32_Storage_FileSystem"] }

[dev-dependencies]
tempfile = "3.10"
